# gum-engine

./: .gitignore  .gitmodules  CMakeLists.txt  ChangeLog  README.md  build.sh  gum-cmake-gen.conf
examples/: BasicCube.h  CMakeLists.txt  Examples.cpp  Examples.h  GBufferTest.h  MaterialWriter.cpp  Noises.h  ObjectWriter.cpp
examples/AnimatedModel/: AnimatedModel.cpp
examples/Billboards/: Billboards.cpp
examples/GBufferTest/: GBufferTest.cpp
examples/GUIs/: GUIs.cpp
examples/GumMaths/: GumMaths.cpp
examples/IrradiancePBR/: IrradiancePBR.cpp
examples/MazeLearning/: MazeLearning.cpp
examples/Ocean/: Ocean.cpp
examples/Particles/: Particles.cpp
examples/PhysicallyBasedRendering/: PhysicallyBasedRendering.cpp
examples/Physics/: Physics.cpp
examples/PostProcessingEffects/: PostProcessingEffects.cpp
examples/ShadowMapping/: ShadowMapping.cpp
examples/SphereGenerator/: SphereGenerator.cpp
examples/Worlds/: AnimatedModel.h  BasicCube.h  Billboards.h  GBufferTest.h  IrradiancePBR.cpp  MazeLearning.cpp  Ocean.cpp  Particles.h  PhysicallyBasedRendering.h  Physics.h  PostProcessingEffects.cpp  PostProcessingEffects.h  ShadowMapping.cpp  ShadowMapping.h  SphereGenerator.cpp  TestScene.h  Vehicle.h  Worlds.h
examples/assets/: maze.txt
examples/assets/guis/: example_interface.xml  examplegui.xml
examples/assets/objects/: testAnim.fbx
examples/assets/shaders/: ocean.frag  ocean.vert
src/: CMakeLists.txt  Config.cmake.in  gum-engine.cpp  gum-engine.h
src/Engine/2D/: Camera2D.cpp  Camera2D.h  Renderer2D.cpp  Renderer2D.h  World2D.cpp  World2D.h
src/Engine/2D/Layer/: Background.cpp  Background.h  DefaultLayerShader.h  Layer.cpp  Layer.h  ScreenPlane.cpp  ScreenPlane.h  TileMap.cpp  TileMap.h
src/Engine/3D/: Camera3D.cpp  Camera3D.h  Camera3DObject.h  Grid.cpp  Grid.h  GridShader.h  Renderer3D.cpp  Renderer3D.h  World3D.cpp  World3D.h
src/Engine/3D/Lightning/: Lightning.cpp  Lightning.h  LightningShader.h
src/Engine/3D/Lightning/ShadowMapping/: ShadowBox.cpp  ShadowMapping.cpp  ShadowMapping.h  ShadowMappingShader.h
src/Engine/3D/Object/: CollisionObject.cpp  CollisionObject.h  ObjectManager.cpp  ObjectManager.h  PhysicsObjectInstance.cpp  PhysicsObjectInstance.h  SceneObject.cpp  SceneObject.h  Skybox.cpp  Skybox.h  SkyboxCloudShader.h  SkyboxShaders.h  SoftBody.cpp  SoftBody.h
src/Engine/3D/Object/NormalRenderer/: NormalRenderer.cpp  NormalRenderer.h  NormalRendererShader.h
src/Engine/3D/Object/Skeletal/: AnimatedModel.cpp  AnimatedModel.h  RagdollObjectInstance.cpp  RagdollObjectInstance.h  Skeleton.cpp  Skeleton.h
src/Engine/3D/Object/Terrain/: Terrain.cpp  Terrain.h
src/Engine/3D/Object/Vehicle/: Vehicle.cpp  Vehicle.h
src/Engine/General/: Animation.cpp  Animation.h  Camera.cpp  Camera.h  CameraObject.h  Grid.cpp  Grid.h  GridShader.h  OcclusionMask.cpp  Renderer3D.cpp  Renderer3D.h  Tools.h  World.cpp  World.h
src/Engine/Lightning/: DirectionalLight.cpp  DirectionalLight.h  GBufferShader.h  G_Buffer.cpp  G_Buffer.h  Light.cpp  Light.h  LightManager.cpp  LightManager.h  Lightning.cpp  Lightning.h  LightningShader.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h  lightbulb.h
src/Engine/Lightning/ShadowMapping/: ShadowBox.cpp  ShadowBox.h  ShadowMapping.cpp  ShadowMapping.h  ShadowMappingShader.h  ShadowShader.vert
src/Engine/Loaders/: ObjectLoader.cpp  ObjectLoader.h  WorldLoader.cpp  WorldLoader.h
src/Engine/Managers/: LightManager.cpp  LightManager.h  MaterialManager.cpp  MaterialManager.h  ObjectManager.cpp  ObjectManager.h  ShaderManager.cpp  TextureManager.cpp
src/Engine/Material/: Material.h  MaterialManager.cpp  MaterialManager.h
src/Engine/Object/: Object.h  ObjectCreation.cpp  ObjectPhysics.cpp  ObjectRender.cpp  ObjectRest.cpp  Skybox.cpp  Skybox.h  SkyboxShaders.h  Transformation.cpp  Transformation.h
src/Engine/Object/Skeletal/: AnimatedModel.cpp  AnimatedModel.h  Bone.cpp  Bone.h  Skeleton.cpp  Skeleton.h
src/Engine/Particle/: Billboard.cpp  Billboard.h  BillboardShader.h  Particle.cpp  Particle.h  ParticleProperties.h  ParticleShader.h  ParticleSystem.cpp  ParticleSystem.h  ShaderInitializer.cpp  ShaderInitializer.h
src/Engine/Physics/: DebugDrawer.cpp  DebugDrawer.h  DebugDrawerBullet.cpp  DebugDrawerBullet.h  Physics.cpp  Physics.h  PhysicsDebugShader.h
src/Engine/PostProcessing/: GBufferShader.h  G_Buffer.cpp  Lightning.h  LightningShader.h  OutlineRenderer.cpp  OutlineRenderer.h  OutlineRendererShader.h  PostProcessing.cpp  PostProcessing.h  PostProcessingShader.h  SSAO.cpp  SSAO.h  SSAOShader.h
src/Engine/PostProcessing/Effects/: Brightfilter.cpp  Brightfilter.h  CombineFramebuffer.cpp  CombineFramebuffer.h  CombineTextures.cpp  CombineTextures.h  CombineTexturesShader.h  ContrastChanger.cpp  ContrastChanger.h  Difference.cpp  Difference.h  Effects.h  GaussianBlur.cpp  GaussianBlur.h  PostProcessingEffect.cpp  PostProcessingEffect.h
src/Engine/PostProcessing/Effects/BloomEffect/: BloomEffect.cpp  BloomEffect.h
src/Engine/PostProcessing/Effects/Brightfilter/: Brightfilter.cpp  (+2 more)
src/Engine/PostProcessing/ImageCorrection/: HighDynamicRange.cpp  HighDynamicRange.h  HighDynamicRangeShader.h
src/Engine/PostProcessing/OutlineRenderer/: OutlineRenderer.cpp  OutlineRenderer.h  OutlineRendererShader.h
src/Engine/PostProcessing/ShadowMapping/: ShadowBox.cpp  ShadowBox.h  ShadowMapping.cpp  ShadowMapping.h
src/Engine/Rendering/: Camera.cpp  Camera.h  Canvas.cpp  Canvas.h  CurveRenderer.cpp  CurveRenderer.h  Gizmo.cpp  Gizmo.h  GizmoShader.h  IDRenderer.cpp  IDRenderer.h  IDRendererShader.h  OcclusionMask.h  Renderer.cpp  Renderer.h  World.cpp  World.h
src/Engine/Shaders/: ParallaxSkyShader.h  ShaderManager.cpp  ShaderManager.h  SimpleShader.h  SpriteShader.h  ThicklinesShader.h
src/Engine/Texture/: ClipPlaneTexture2D.cpp  ClipPlaneTexture2D.h  EnvironmentMap.cpp  EnvironmentMap.h  PerlinNoise.cpp  PerlinNoise.h  PerlinNoise3D.cpp  PerlinNoise3D.h  ReflectiveTexture2D.cpp  ReflectiveTexture2D.h  ReflectiveTextureCube.cpp  ReflectiveTextureCube.h  TextureManager.cpp  TextureManager.h
(+18 files in other folders)
